--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -19,6 +19,10 @@
       <%= form.label :comics_link %>
       <%= form.text_field :comics_link %>
     </p>
+    <p>
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </p>
     <%= form.submit %>
   <% end %>
   
