--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -16,6 +16,10 @@
     <%= form.text_field :name %>
   </p>
   <p>
+    <%= form.label :phrase %>
+    <%= form.text_field :phrase %>
+  </p>
+  <p>
     <%= form.label :description %>
     <%= form.text_field :description %>
   </p>
