--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,25 +1,37 @@
-<div style="text-align: center;">
-  <h1>MCU Characters</h1>
+<%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+
+<div style="text-align: center; margin: 50px;">
+  <h1 class="russo-one-regular">Marvel Cinematic Universe</h1>
 </div>
+
+
+
 
 <div class="character-grid">
   <% @characters.each do |character| %>
     <div class="character-item">
       <% if character.profile_image.attached? %>
         <%= link_to character_path(character) do %>
-          <%= image_tag url_for(character.profile_image), alt: character.name, size: "150x250" %>
+          <div class="character">
+            <%= image_tag url_for(character.profile_image), alt: character.name, size: "150x250" %>
+            <div class="character-name">
+              <%= character.name %>
+            </div>
+          </div>
         <% end %>
       <% else %>
         <%= link_to character.name, character_path(character) %>
       <% end %>
-      <div class="character-actions">
-        <%= link_to 'Delete', character_path(character), method: :delete, data: { confirm: 'Are you sure?' } %>
-        <%= link_to 'Edit', edit_character_path(character), class: 'btn btn-warning' %>
-      </div>
     </div>
   <% end %>
 </div>
 
+
+
 <div style="text-align: center; margin-top: 20px;">
-  <%= link_to 'Add Character', new_character_path, class: 'btn btn-primary' %>
+  <div class="add-character-container">
+    <%= link_to new_character_path do %>
+      <%= image_tag 'plus.png', alt: 'Add Character', class: 'add-character-icon' %>
+    <% end %>
+  </div>
 </div>
